feat: utilisation des VirtualThread avec Semaphore